# xmrdc

./: README.md  readme.txt  requirements.txt
stable-version/: client.py  controlled.py
win-lib264-version/: client.py  controlled.py  requirements.txt
windows-fast-version/: client.py  controlled.py  server.py  testdxcam.py
windows-version/: client.py  controlled.py  server.py
windows-withc-version/: client.py  controlled.py
windows-withc-version/xmrdc_renderer/: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  xmrdc_renderer.cpp
windows-withc-version/xmrdc_renderer_mf/: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  xmrdc_renderer_mf.cpp
